@@ -1,10 +1,14 @@
-2011-06-26  Charlie Zender  <zender@uci.edu>
+2011-06-27  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.9 release procedure:
  	Changes since nco-4_0_8:
 	cd ~/nco;cvs tag -d nco-4_0_9;cvs tag -d nco-4_0_9-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
 	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1
+
+	* Incorporate more useful hints from Denis Heimbigner when DAP fails
+
+2011-06-26  Charlie Zender  <zender@uci.edu>
 
 	* Remove UDUNITS section of configure.in because it was overly
 	complex to maintain it at same time as UDUNITS2 which supercedes it
